Fix image alignment

--- a/css/main.css
+++ b/css/main.css
@@ -101,8 +101,6 @@ button {
 article {
     width: 95%;
     margin: auto;
-    padding-bottom: 5%;
-    margin-bottom: 2%;
     padding-top: 5%;
 }
 
@@ -120,8 +118,11 @@ article {
 }
 
 #imgblock {
-
-		margin: auto;
+    margin: auto;
+    text-align: center;
+		background-color: white;
+		margin-bottom: 5%;
+		padding-bottom: 1%;
 }
 
 .images {
